// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComboBox /> opens dropdown menu when clicked 1`] = `
<div
  className="talixo-combo-box__wrapper"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="open menu"
    className="talixo-combo-box__button"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="talixo-combo-box__item"
    >
      Choose number
    </span>
    <div
      className="talixo-combo-box__arrow"
    >
      <span
        aria-hidden="true"
        className="talixo-icon tai tai--material"
      >
        
      </span>
    </div>
  </button>
</div>
`;

exports[`<ComboBox /> renders correctly 1`] = `
<div
  className="talixo-combo-box__wrapper"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="open menu"
    className="talixo-combo-box__button"
    data-toggle={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    <span
      className="talixo-combo-box__item"
    >
      1
    </span>
    <div
      className="talixo-combo-box__arrow"
    >
      <span
        aria-hidden="true"
        className="talixo-icon tai tai--material"
      >
        
      </span>
    </div>
  </button>
</div>
`;
